tests/integration/reject/module_fs_private.rsg
// TEST: compile_error
// EXPECT-ERROR: private

mod private_mod

fn main() {
    private_mod::secret()
}
